fixed sticky hover effect on mobile for class scheduler

--- a/static/Styles/class_scheduler_page_styles.css
+++ b/static/Styles/class_scheduler_page_styles.css
@@ -47,7 +47,8 @@ input[type="submit"].timing-modifier {
     margin-left: 30%;
 }
 
-input[type="submit"]:hover {
+@media (hover: hover) {
+    input[type="submit"]:hover {
     width: 304px;
     background: goldenrod;
 }
